# Minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt
.PVS-Studio/State/: ReportState.json
Engine/: CMakeLists.txt
Engine/dependencies/glad/: CMakeLists.txt
Engine/dependencies/glad/include/glad/: glad.h
Engine/dependencies/glad/src/: glad.c
Engine/res/Shaders/: frag.fs  skybox.fs  skybox.vs  ver.vs
Engine/src/: Camera.cpp  Camera.hpp  GameObject.hpp  Logger.cpp  Logger.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  main.PVS-Studio.dfo  main.cpp
Engine/src/EventsHandler/: Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Engine/src/Physics/: Collision.hpp
Engine/src/Render/: Batch.cpp  Batch.hpp  Block.cpp  Block.hpp  ChunksRenderer.PVS-Studio.dfo  ChunksRenderer.cpp  ChunksRenderer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
Engine/src/Render/TextRenderer/: TextRenderer.PVS-Studio.dfo  TextRenderer.cpp  TextRenderer.hpp
Engine/src/Shaders/: frag.fs  ver.vs
Engine/src/Templates/: Array3D.hpp
Engine/src/World/: Chunk.PVS-Studio.dfo  Chunk.cpp  Chunk.hpp  Coordinates.cpp  Coordinates.hpp  World.cpp  World.hpp
